# bevy_manim

./: Cargo.toml  LICENSE  README.md
examples/: README.md  animated_draw_fade.rs  animated_draw_from_point.rs  animated_draw_from_point_double_smooth.rs  draw.rs
src/: bevy.rs  lib.rs  prelude.rs
src/anim/: funcs.rs  mod.rs
src/anim/delete/: mod.rs
src/anim/emergence/: fade.rs  from_point.rs  mod.rs
src/core/: animation.rs  animation_kind.rs  mod.rs
src/draw/: drawing.rs  mod.rs
src/draw/primitives/: circle.rs  line.rs  mod.rs  point.rs  polygon.rs  rectangle.rs
src/play/: mod.rs
